--- a/weather.css
+++ b/weather.css
@@ -7,9 +7,9 @@
 }
 
 :root{
-    --gr_rain: linear-gradient(135deg,#053fff59,#053fff);
-    --gr_medium: linear-gradient(135deg,rgba(60, 255, 0, 0.226),rgb(41, 177, 0));
-    --gr_sunny: linear-gradient(135deg,rgba(255, 38, 0, 0.205),rgb(206, 31, 0));
+    --gr_rain: linear-gradient(135deg,#0569ff79,#0032d4);
+    --gr_medium: linear-gradient(135deg,rgba(0, 255, 191, 0.678),rgba(41, 177, 0, 0.637));
+    --gr_sunny: linear-gradient(135deg,rgba(255, 166, 0, 0.315),rgba(206, 31, 0, 0.726));
 }
 
 .background{
@@ -32,17 +32,6 @@ filter: blur(3px)
     padding: 40px 35px;
     text-align: center;
     box-shadow: 0px 0px 10px black;
-}
-.card::before{
-    content: '';
-    margin:-35px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    filter: blur(30px),invert(0.5) ;
-    z-index: -1;
 }
 
 .rainy{
@@ -68,15 +57,20 @@ filter: blur(3px)
     outline: 0;
     background-color: #ffffff93;
     color: #555;
-    padding: 10px 25px;
-    height: 60px;
+    padding: 0.2em 1em;
+    height: 2.5em;
     border-radius: 30px;
-    flex: 1;
-    margin-right: 16px;
+    flex:1;
+    margin-right: 1.2em;
     font-size: 18px;
     box-shadow: 0px 0px 7px black;
     transition: 500ms ease;
     
+}
+@media screen and (max-width: 390px){
+    .search input{
+        max-width: 200px;
+    }
 }
 .search :hover{
     box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.664);
@@ -118,26 +112,46 @@ filter: blur(3px)
 }
 .weather-icon{
     width: 170px;
-    margin-top:30px;
+}
 
+@media screen and (max-width:390px){
+    .weather h1{
+        font-size: 4em ! important;
+        font-weight: 300 !important;
+    }
+    
+    .weather h2{
+        font-size: 2.5em !important;
+        font-weight: 400;
+    }
+
+    .weather-icon{
+        width: 130px;
+    }
+    .weather{
+        max-height: 300px
+    }
 }
 .weather h1{
-    font-size: 80px;
+    font-size: 6em;
     font-weight: 400;
 }
 
 .weather h2{
     font-size: 45px;
     font-weight: 400;
-    margin-top: -10px;
+    margin-top: -0.2em;
 }
 
 .details{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
-    margin-top: 50px;
+    padding: 0 2em;
+    margin-top: 3.4em;
+    border:1px solid rgba(0, 0, 0, 0.24);
+    border-radius: 0.5em;
+    align-self: center;
 }
 
 .col{
@@ -153,7 +167,7 @@ filter: blur(3px)
 
 .sym:nth-child(n){
     font-size: 1.1em;
-    color: rgb(250,250,250,0.6);
+    color: rgba(250, 250, 250, 0.801);
     transition: all 0.7s;
     font-weight: 200;
 }
